<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_apply_for_jobs"
            android:icon="@drawable/ic_apply_for_jobs"
            android:title="@string/menu_apply_for_jobs" />
        <item
            android:id="@+id/nav_view_job_status"
            android:icon="@drawable/ic_view_job_status"
            android:title="@string/menu_view_job_status" />
        <item
            android:id="@+id/nav_update_details"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/menu_update_details" />

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_password"
            android:title="@string/menu_change_password" />
    </group>

</menu>