<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.campusrecruitmentsystem.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_manage_student"
        android:name="com.campusrecruitmentsystem.fragments.admin.ManageStudentFragment"
        android:label="@string/menu_manage_student"
        tools:layout="@layout/fragment_manage_student" />

    <fragment
        android:id="@+id/nav_manage_company"
        android:name="com.campusrecruitmentsystem.fragments.admin.ManageCompanyFragment"
        android:label="@string/menu_manage_company"
        tools:layout="@layout/fragment_manage_company" />

    <fragment
        android:id="@+id/nav_manage_admin"
        android:name="com.campusrecruitmentsystem.fragments.superadmin.ManageAdminFragment"
        android:label="@string/menu_manage_admin"
        tools:layout="@layout/fragment_manage_company" />

    <fragment
        android:id="@+id/nav_update_details"
        android:name="com.campusrecruitmentsystem.fragments.UpdateDetailsFragment"
        android:label="@string/menu_update_details"
        tools:layout="@layout/fragment_update_details" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.campusrecruitmentsystem.fragments.ChangePasswordFragment"
        android:label="@string/menu_change_password"
        tools:layout="@layout/fragment_change_password" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.campusrecruitmentsystem.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/activity_about_us" />

</navigation>